change url's with placeholder (replace placeholder with domain name when the content is requested)

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ LEARNING_OBJECT_STORAGE_LOCATION = "storage"
 DATABASE_URL=mongodb://localhost:27017/learing_object_test_database
 ERASE_DATABASE_ON_SYNC=true
 LEARNING_OBJECTS_GIT_REPOSITORY=https://github.com/dwengovzw/learning_content
+DOMAIN_URL=http://localhost:8085
