added repository location parameter to the .env file

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ ERASE_DATABASE_ON_SYNC=true
 LEARNING_OBJECTS_GIT_REPOSITORY=https://github.com/dwengovzw/learning_content
 DOMAIN_URL=http://localhost:8085
 LEARNING_OBJECT_LOADING_SCHEDULE = '*/10 * * * * *'
+LEARNING_OBJECT_REPOSITORY_LOCATION = '/home/ubuntu/dwengo-deploy/learning_object_backend/repos'
