--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.6.0",
     "js-yaml": "^3.14.1",
     "jsonwebtoken": "^8.5.1",
+    "jwk-to-pem": "^2.0.5",
     "ltijs": "^5.8.1",
     "marked": "^2.1.3",
     "mkdirp": "^0.5.5",
