--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "ajv": "^8.6.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.2",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dompurify": "^2.2.9",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "isomorphic-dompurify": "^0.14.0",
+    "express-openid-connect": "^2.5.1",
+    "express-session": "^1.17.2",
+    "isomorphic-dompurify": "^0.12.0",
     "jquery": "^3.6.0",
     "js-yaml": "^3.14.1",
     "jsonwebtoken": "^8.5.1",
@@ -40,7 +43,10 @@
     "multer": "^1.4.2",
     "node-schedule": "^2.0.0",
     "nodemon": "^2.0.9",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "simple-git": "^2.42.0",
+    "sweet-auth": "^1.0.3",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "xmlhttprequest": "^1.8.0"
@@ -49,7 +55,7 @@
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.5",
     "dotenv": "^10.0.0",
-    "jest": "^27.0.6",
+    "jest": "^27.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   },
