--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.2",
     "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dompurify": "^2.2.9",
     "ejs": "^3.1.6",
