--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "express-openid-connect": "^2.5.1",
     "express-session": "^1.17.2",
+    "gift-pegjs": "^0.2.1",
     "isomorphic-dompurify": "^0.12.0",
     "jquery": "^3.6.0",
     "js-yaml": "^3.14.1",
