--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "multer": "^1.4.2",
     "node-schedule": "^2.0.0",
     "nodemon": "^2.0.9",
-    "passport": "^0.5.0",
+    "passport": "0.5.0",
     "passport-local": "^1.0.0",
     "simple-git": "^3.10.0",
     "sweet-auth": "^1.0.3",
