Added ability to add relative image urls in html image tags in markdown files

--- a/.env
+++ b/.env
@@ -5,9 +5,14 @@ KEY_FILE = "./certs/key.pem"
 CERT_FILE = "./certs/cert.pem"
 CA_FILE = ""
 LEARNING_OBJECT_STORAGE_LOCATION = "storage"
-DATABASE_URL=mongodb://localhost:27017/learning_object_test_database
+DATABASE_URL=mongodb://127.0.0.1:27017/learning_object_test_database
 ERASE_DATABASE_ON_SYNC=true
 LEARNING_OBJECTS_GIT_REPOSITORY=https://github.com/dwengovzw/learning_content
+LEARNING_OBJECTS_GIT_REPOSITORY_BRANCH="staging"
+LEARNING_OBJECT_STORAGE_NAME="storage"
 DOMAIN_URL=http://localhost:8085
 LEARNING_OBJECT_LOADING_SCHEDULE = '*/10 * * * * *'
-LEARNING_OBJECT_REPOSITORY_LOCATION = '/home/ubuntu/dwengo-deploy/learning_object_backend/repos'
+LEARNING_OBJECT_REPOSITORY_LOCATION = 'C:\\Users\\tomne\\Documents\\work\\applications\\Learning-Object-Repository\\repos'
+ADMIN_USER_USERNAME=dwengo
+ADMIN_USER_PASSWORD=test
+CACHE_TIME_SECONDS=86400 
