Added print css

--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ LEARNING_OBJECT_REPOSITORY_LOCATION = 'C:\\Users\\tomne\\Documents\\work\\applic
 ADMIN_USER_USERNAME=dwengo
 ADMIN_USER_PASSWORD=test
 CACHE_TIME_SECONDS=86400 
+CORS_ORIGIN="*"
