--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "multer": "^1.4.2",
     "node-schedule": "^2.0.0",
     "nodemon": "^2.0.9",
-    "passport": "^0.5.3",
-    "passport-local": "^1.0.0",
+    "passport": "0.5.3",
+    "passport-local": "1.0.0",
     "simple-git": "^3.10.0",
     "sweet-auth": "^1.0.3",
     "uuid": "^8.3.2",
