--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "marked": "^4.0.17",
     "mkdirp": "^0.5.5",
     "mongodb-memory-server": "^7.2.0",
-    "mongoose": "^5.13.2",
+    "mongoose": "10.4.2",
     "mongoose-uuid": "^0.0.2",
     "multer": "^1.4.2",
     "node-schedule": "^2.0.0",
